# Nyandroid

./: .gitignore  CLAUDE.md  README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  pty.c
app/src/main/java/dev/nyandroid/terminal/: MainActivity.kt  SettingsActivity.kt  TerminalService.kt
app/src/main/java/dev/nyandroid/terminal/backend/: AvfVmBackend.kt  LocalPtyBackend.kt  Pty.kt  ShellIntegration.kt  SshBackend.kt  SshKeyManager.kt  TerminalBackend.kt  VmConnector.kt
app/src/main/java/dev/nyandroid/terminal/config/: KeyBinding.kt  KittyConfig.kt
app/src/main/java/dev/nyandroid/terminal/emulator/: CharWidth.kt  ColorScheme.kt  FrameSnapshot.kt  ScrollbackBuffer.kt  SelectionRange.kt  TerminalColors.kt  TerminalEmulator.kt  TerminalGrid.kt  VtParser.kt
app/src/main/java/dev/nyandroid/terminal/font/: CellMetrics.kt  FontSpec.kt  GlyphRasterizer.kt  NerdFontFamily.kt
app/src/main/java/dev/nyandroid/terminal/input/: KeyEncoder.kt  MouseEncoder.kt
app/src/main/java/dev/nyandroid/terminal/notification/: TerminalNotification.kt
app/src/main/java/dev/nyandroid/terminal/render/: GpuBackend.kt  RenderThread.kt
app/src/main/java/dev/nyandroid/terminal/view/: ExtraKeysBar.kt  SearchOverlay.kt  SplitContainer.kt  TabBar.kt  TabManager.kt  TerminalController.kt  TerminalView.kt  UrlDetector.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: themes.xml
docs/: ARCHITECTURE.md
gradle/: libs.versions.toml
(+7 files in other folders)
